data/libdpxwrapper-0.1/libdpx.h


void		DPxOpen(void);							
void		DPxClose(void);							
int			DPxIsReady(void);						
void		DPxReadRam(unsigned address, unsigned length, void* buffer);	
void		DPxWriteRam(unsigned address, unsigned length, void* buffer);	
size_t		DPxGetReadRamBuffAddr(void);									
int			DPxGetReadRamBuffSize(void);									
size_t		DPxGetWriteRamBuffAddr(void);									
int			DPxGetWriteRamBuffSize(void);									
void		DPxWriteRegCache(void);					
void		DPxUpdateRegCache(void);				
void		DPxWriteRegCacheAfterVideoSync(void);	
void		DPxUpdateRegCacheAfterVideoSync(void);	
void		DPxWriteRegCacheAfterPixelSync(int nPixels, unsigned char* pixelData, int timeout);	
void		DPxUpdateRegCacheAfterPixelSync(int nPixels, unsigned char* pixelData, int timeout);
int			DPxGetID(void);							
int			DPxIsViewpixx(void);					
int			DPxIsViewpixx3D(void);					
int			DPxIsPropixx(void);                     
int			DPxGetRamSize(void);					
int			DPxGetPartNumber(void);					
int			DPxGetFirmwareRev(void);				
double		DPxGetSupplyVoltage(void);				
double		DPxGetSupplyCurrent(void);				
double		DPxGetSupply2Voltage(void);				
double		DPxGetSupply2Current(void);				
int			DPxIs5VFault(void);						
int			DPxIsPsyncTimeout(void);				
int			DPxIsRamOffline(void);					
double		DPxGetTempCelcius(void);				
double		DPxGetTemp2Celcius(void);				
double		DPxGetTemp3Celcius(void);				
double		DPxGetTempFarenheit(void);				
double		DPxGetTime(void);						
void		DPxSetMarker(void);						
double		DPxGetMarker(void);						
void		DPxGetNanoTime(unsigned *nanoHigh32, unsigned *nanoLow32); 
void		DPxGetNanoMarker(unsigned *nanoHigh32, unsigned *nanoLow32); 
int			DPxGetDacNumChans(void);								
void		DPxSetDacValue(int value, int channel);					
int			DPxGetDacValue(int channel);							
void        DPxGetDacRange(int channel, double *minV, double *maxV); 
void        DPxSetDacVoltage(double voltage, int channel);			
double		DPxGetDacVoltage(int channel);							
void		DPxEnableDacCalibRaw(void);								
void		DPxDisableDacCalibRaw(void);							
int			DPxIsDacCalibRaw(void);									
void		DPxEnableDacBuffChan(int channel);						
void		DPxDisableDacBuffChan(int channel);						
void		DPxDisableDacBuffAllChans(void);						
int			DPxIsDacBuffChan(int channel);							
void		DPxSetDacBuffBaseAddr(unsigned buffBaseAddr);			
unsigned	DPxGetDacBuffBaseAddr(void);							
void		DPxSetDacBuffReadAddr(unsigned buffReadAddr);			
unsigned	DPxGetDacBuffReadAddr(void);							
void		DPxSetDacBuffSize(unsigned buffSize);					
unsigned	DPxGetDacBuffSize(void);								
void		DPxSetDacBuff(unsigned buffAddr, unsigned buffSize);	
void		DPxSetDacSchedOnset(unsigned onset);					
unsigned	DPxGetDacSchedOnset(void);								
void		DPxSetDacSchedRate(unsigned rateValue, int rateUnits);	
unsigned	DPxGetDacSchedRate(int *rateUnits);						
void		DPxSetDacSchedCount(unsigned count);					
unsigned	DPxGetDacSchedCount(void);								
void		DPxEnableDacSchedCountdown(void);						
void		DPxDisableDacSchedCountdown(void);						
int			DPxIsDacSchedCountdown(void);							
void		DPxSetDacSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	
void		DPxStartDacSched(void);									
void		DPxStopDacSched(void);									
int			DPxIsDacSchedRunning(void);								
int			DPxGetAdcNumChans(void);								
int			DPxGetAdcValue(int channel);							
void		DPxGetAdcRange(int channel, double *minV, double *maxV); 
double		DPxGetAdcVoltage(int channel);							
void		DPxSetAdcBuffChanRef(int channel, int chanRef);			
int			DPxGetAdcBuffChanRef(int channel);						
void		DPxEnableAdcBuffChan(int channel);						
void		DPxDisableAdcBuffChan(int channel);						
void		DPxDisableAdcBuffAllChans(void);						
int			DPxIsAdcBuffChan(int channel);							
void		DPxEnableAdcCalibRaw(void);								
void		DPxDisableAdcCalibRaw(void);							
int			DPxIsAdcCalibRaw(void);									
void		DPxEnableDacAdcLoopback(void);							
void		DPxDisableDacAdcLoopback(void);							
int			DPxIsDacAdcLoopback(void);								
void		DPxEnableAdcFreeRun(void);								
void		DPxDisableAdcFreeRun(void);								
int			DPxIsAdcFreeRun(void);									
void		DPxSetAdcBuffBaseAddr(unsigned buffBaseAddr);			
unsigned	DPxGetAdcBuffBaseAddr(void);							
void		DPxSetAdcBuffWriteAddr(unsigned buffWriteAddr);			
unsigned	DPxGetAdcBuffWriteAddr(void);							
void		DPxSetAdcBuffSize(unsigned buffSize);					
unsigned	DPxGetAdcBuffSize(void);								
void		DPxSetAdcBuff(unsigned buffAddr, unsigned buffSize);	