misc/libdpxwrapper-0.1/libdpxwrapper.py


DPxOpen = lib_handle.DPxOpen
DPxOpen.restype = None
DPxOpen.argtypes = []
DPxClose = lib_handle.DPxClose
DPxClose.restype = None
DPxClose.argtypes = []
DPxIsReady = lib_handle.DPxIsReady
DPxIsReady.restype = c_int
DPxIsReady.argtypes = []
DPxReadRam = lib_handle.DPxReadRam
DPxReadRam.restype = None
DPxReadRam.argtypes = [c_uint, c_uint, c_void_p]
DPxWriteRam = lib_handle.DPxWriteRam
DPxWriteRam.restype = None
DPxWriteRam.argtypes = [c_uint, c_uint, c_void_p]
DPxGetReadRamBuffAddr = lib_handle.DPxGetReadRamBuffAddr
DPxGetReadRamBuffAddr.restype = c_size_t
DPxGetReadRamBuffAddr.argtypes = []
DPxGetReadRamBuffSize = lib_handle.DPxGetReadRamBuffSize
DPxGetReadRamBuffSize.restype = c_int
DPxGetReadRamBuffSize.argtypes = []
DPxGetWriteRamBuffAddr = lib_handle.DPxGetWriteRamBuffAddr
DPxGetWriteRamBuffAddr.restype = c_size_t
DPxGetWriteRamBuffAddr.argtypes = []
DPxGetWriteRamBuffSize = lib_handle.DPxGetWriteRamBuffSize
DPxGetWriteRamBuffSize.restype = c_int
DPxGetWriteRamBuffSize.argtypes = []
DPxWriteRegCache = lib_handle.DPxWriteRegCache
DPxWriteRegCache.restype = None
DPxWriteRegCache.argtypes = []
DPxUpdateRegCache = lib_handle.DPxUpdateRegCache
DPxUpdateRegCache.restype = None
DPxUpdateRegCache.argtypes = []
DPxWriteRegCacheAfterVideoSync = lib_handle.DPxWriteRegCacheAfterVideoSync
DPxWriteRegCacheAfterVideoSync.restype = None
DPxWriteRegCacheAfterVideoSync.argtypes = []
DPxUpdateRegCacheAfterVideoSync = lib_handle.DPxUpdateRegCacheAfterVideoSync
DPxUpdateRegCacheAfterVideoSync.restype = None
DPxUpdateRegCacheAfterVideoSync.argtypes = []
DPxWriteRegCacheAfterPixelSync = lib_handle.DPxWriteRegCacheAfterPixelSync
DPxWriteRegCacheAfterPixelSync.restype = None
DPxWriteRegCacheAfterPixelSync.argtypes = [c_int, POINTER(c_ubyte), c_int]
DPxUpdateRegCacheAfterPixelSync = lib_handle.DPxUpdateRegCacheAfterPixelSync
DPxUpdateRegCacheAfterPixelSync.restype = None
DPxUpdateRegCacheAfterPixelSync.argtypes = [c_int, POINTER(c_ubyte), c_int]
DPxGetID = lib_handle.DPxGetID
DPxGetID.restype = c_int
DPxGetID.argtypes = []
DPxIsViewpixx = lib_handle.DPxIsViewpixx
DPxIsViewpixx.restype = c_int
DPxIsViewpixx.argtypes = []
DPxIsViewpixx3D = lib_handle.DPxIsViewpixx3D
DPxIsViewpixx3D.restype = c_int
DPxIsViewpixx3D.argtypes = []
DPxIsPropixx = lib_handle.DPxIsPropixx
DPxIsPropixx.restype = c_int
DPxIsPropixx.argtypes = []
DPxGetRamSize = lib_handle.DPxGetRamSize
DPxGetRamSize.restype = c_int
DPxGetRamSize.argtypes = []
DPxGetPartNumber = lib_handle.DPxGetPartNumber
DPxGetPartNumber.restype = c_int
DPxGetPartNumber.argtypes = []
DPxGetFirmwareRev = lib_handle.DPxGetFirmwareRev
DPxGetFirmwareRev.restype = c_int
DPxGetFirmwareRev.argtypes = []
DPxGetSupplyVoltage = lib_handle.DPxGetSupplyVoltage
DPxGetSupplyVoltage.restype = c_double
DPxGetSupplyVoltage.argtypes = []
DPxGetSupplyCurrent = lib_handle.DPxGetSupplyCurrent
DPxGetSupplyCurrent.restype = c_double
DPxGetSupplyCurrent.argtypes = []
DPxGetSupply2Voltage = lib_handle.DPxGetSupply2Voltage
DPxGetSupply2Voltage.restype = c_double
DPxGetSupply2Voltage.argtypes = []
DPxGetSupply2Current = lib_handle.DPxGetSupply2Current
DPxGetSupply2Current.restype = c_double
DPxGetSupply2Current.argtypes = []
DPxIs5VFault = lib_handle.DPxIs5VFault
DPxIs5VFault.restype = c_int
DPxIs5VFault.argtypes = []
DPxIsPsyncTimeout = lib_handle.DPxIsPsyncTimeout
DPxIsPsyncTimeout.restype = c_int
DPxIsPsyncTimeout.argtypes = []
DPxIsRamOffline = lib_handle.DPxIsRamOffline
DPxIsRamOffline.restype = c_int
DPxIsRamOffline.argtypes = []
DPxGetTempCelcius = lib_handle.DPxGetTempCelcius
DPxGetTempCelcius.restype = c_double
DPxGetTempCelcius.argtypes = []
DPxGetTemp2Celcius = lib_handle.DPxGetTemp2Celcius
DPxGetTemp2Celcius.restype = c_double
DPxGetTemp2Celcius.argtypes = []
DPxGetTemp3Celcius = lib_handle.DPxGetTemp3Celcius
DPxGetTemp3Celcius.restype = c_double
DPxGetTemp3Celcius.argtypes = []
DPxGetTempFarenheit = lib_handle.DPxGetTempFarenheit
DPxGetTempFarenheit.restype = c_double
DPxGetTempFarenheit.argtypes = []
DPxGetTime = lib_handle.DPxGetTime
DPxGetTime.restype = c_double
DPxGetTime.argtypes = []
DPxSetMarker = lib_handle.DPxSetMarker
DPxSetMarker.restype = None
DPxSetMarker.argtypes = []
DPxGetMarker = lib_handle.DPxGetMarker
DPxGetMarker.restype = c_double
DPxGetMarker.argtypes = []
DPxGetNanoTime = lib_handle.DPxGetNanoTime
DPxGetNanoTime.restype = None
DPxGetNanoTime.argtypes = [POINTER(c_int), POINTER(c_int)]
DPxGetNanoMarker = lib_handle.DPxGetNanoMarker
DPxGetNanoMarker.restype = None
DPxGetNanoMarker.argtypes = [POINTER(c_int), POINTER(c_int)]
DPxGetDacNumChans = lib_handle.DPxGetDacNumChans
DPxGetDacNumChans.restype = c_int
DPxGetDacNumChans.argtypes = []
DPxSetDacValue = lib_handle.DPxSetDacValue
DPxSetDacValue.restype = None
DPxSetDacValue.argtypes = [c_int, c_int]
DPxGetDacValue = lib_handle.DPxGetDacValue
DPxGetDacValue.restype = c_int
DPxGetDacValue.argtypes = [c_int]
DPxGetDacRange = lib_handle.DPxGetDacRange
DPxGetDacRange.restype = None
DPxGetDacRange.argtypes = [c_int, POINTER(c_double), POINTER(c_double)]
DPxSetDacVoltage = lib_handle.DPxSetDacVoltage
DPxSetDacVoltage.restype = None
DPxSetDacVoltage.argtypes = [c_double, c_int]
DPxGetDacVoltage = lib_handle.DPxGetDacVoltage
DPxGetDacVoltage.restype = c_double
DPxGetDacVoltage.argtypes = [c_int]
DPxEnableDacCalibRaw = lib_handle.DPxEnableDacCalibRaw
DPxEnableDacCalibRaw.restype = None
DPxEnableDacCalibRaw.argtypes = []
DPxDisableDacCalibRaw = lib_handle.DPxDisableDacCalibRaw
DPxDisableDacCalibRaw.restype = None
DPxDisableDacCalibRaw.argtypes = []
DPxIsDacCalibRaw = lib_handle.DPxIsDacCalibRaw
DPxIsDacCalibRaw.restype = c_int
DPxIsDacCalibRaw.argtypes = []
DPxEnableDacBuffChan = lib_handle.DPxEnableDacBuffChan
DPxEnableDacBuffChan.restype = None
DPxEnableDacBuffChan.argtypes = [c_int]
DPxDisableDacBuffChan = lib_handle.DPxDisableDacBuffChan
DPxDisableDacBuffChan.restype = None
DPxDisableDacBuffChan.argtypes = [c_int]
DPxDisableDacBuffAllChans = lib_handle.DPxDisableDacBuffAllChans
DPxDisableDacBuffAllChans.restype = None
DPxDisableDacBuffAllChans.argtypes = []
DPxIsDacBuffChan = lib_handle.DPxIsDacBuffChan
DPxIsDacBuffChan.restype = c_int
DPxIsDacBuffChan.argtypes = [c_int]
DPxSetDacBuffBaseAddr = lib_handle.DPxSetDacBuffBaseAddr
DPxSetDacBuffBaseAddr.restype = None
DPxSetDacBuffBaseAddr.argtypes = [c_uint]
DPxGetDacBuffBaseAddr = lib_handle.DPxGetDacBuffBaseAddr
DPxGetDacBuffBaseAddr.restype = c_uint
DPxGetDacBuffBaseAddr.argtypes = []
DPxSetDacBuffReadAddr = lib_handle.DPxSetDacBuffReadAddr
DPxSetDacBuffReadAddr.restype = None
DPxSetDacBuffReadAddr.argtypes = [c_uint]
DPxGetDacBuffReadAddr = lib_handle.DPxGetDacBuffReadAddr
DPxGetDacBuffReadAddr.restype = c_uint
DPxGetDacBuffReadAddr.argtypes = []
DPxSetDacBuffSize = lib_handle.DPxSetDacBuffSize
DPxSetDacBuffSize.restype = None
DPxSetDacBuffSize.argtypes = [c_uint]
DPxGetDacBuffSize = lib_handle.DPxGetDacBuffSize
DPxGetDacBuffSize.restype = c_uint
DPxGetDacBuffSize.argtypes = []
DPxSetDacBuff = lib_handle.DPxSetDacBuff
DPxSetDacBuff.restype = None
DPxSetDacBuff.argtypes = [c_uint, c_uint]
DPxSetDacSchedOnset = lib_handle.DPxSetDacSchedOnset
DPxSetDacSchedOnset.restype = None
DPxSetDacSchedOnset.argtypes = [c_uint]
DPxGetDacSchedOnset = lib_handle.DPxGetDacSchedOnset
DPxGetDacSchedOnset.restype = c_uint
DPxGetDacSchedOnset.argtypes = []
DPxSetDacSchedRate = lib_handle.DPxSetDacSchedRate
DPxSetDacSchedRate.restype = None
DPxSetDacSchedRate.argtypes = [c_uint, c_int]
DPxGetDacSchedRate = lib_handle.DPxGetDacSchedRate
DPxGetDacSchedRate.restype = c_uint
DPxGetDacSchedRate.argtypes = [POINTER(c_int)]
DPxSetDacSchedCount = lib_handle.DPxSetDacSchedCount
DPxSetDacSchedCount.restype = None
DPxSetDacSchedCount.argtypes = [c_uint]
DPxGetDacSchedCount = lib_handle.DPxGetDacSchedCount
DPxGetDacSchedCount.restype = c_uint
DPxGetDacSchedCount.argtypes = []
DPxEnableDacSchedCountdown = lib_handle.DPxEnableDacSchedCountdown
DPxEnableDacSchedCountdown.restype = None
DPxEnableDacSchedCountdown.argtypes = []
DPxDisableDacSchedCountdown = lib_handle.DPxDisableDacSchedCountdown
DPxDisableDacSchedCountdown.restype = None
DPxDisableDacSchedCountdown.argtypes = []
DPxIsDacSchedCountdown = lib_handle.DPxIsDacSchedCountdown
DPxIsDacSchedCountdown.restype = c_int
DPxIsDacSchedCountdown.argtypes = []
DPxSetDacSched = lib_handle.DPxSetDacSched
DPxSetDacSched.restype = None
DPxSetDacSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartDacSched = lib_handle.DPxStartDacSched
DPxStartDacSched.restype = None
DPxStartDacSched.argtypes = []
DPxStopDacSched = lib_handle.DPxStopDacSched
DPxStopDacSched.restype = None
DPxStopDacSched.argtypes = []
DPxIsDacSchedRunning = lib_handle.DPxIsDacSchedRunning
DPxIsDacSchedRunning.restype = c_int
DPxIsDacSchedRunning.argtypes = []
DPxGetAdcNumChans = lib_handle.DPxGetAdcNumChans
DPxGetAdcNumChans.restype = c_int
DPxGetAdcNumChans.argtypes = []
DPxGetAdcValue = lib_handle.DPxGetAdcValue
DPxGetAdcValue.restype = c_int
DPxGetAdcValue.argtypes = [c_int]
DPxGetAdcRange = lib_handle.DPxGetAdcRange
DPxGetAdcRange.restype = None
DPxGetAdcRange.argtypes = [c_int, POINTER(c_double), POINTER(c_double)]
DPxGetAdcVoltage = lib_handle.DPxGetAdcVoltage
DPxGetAdcVoltage.restype = c_double
DPxGetAdcVoltage.argtypes = [c_int]
DPxSetAdcBuffChanRef = lib_handle.DPxSetAdcBuffChanRef
DPxSetAdcBuffChanRef.restype = None
DPxSetAdcBuffChanRef.argtypes = [c_int, c_int]
DPxGetAdcBuffChanRef = lib_handle.DPxGetAdcBuffChanRef
DPxGetAdcBuffChanRef.restype = c_int
DPxGetAdcBuffChanRef.argtypes = [c_int]
DPxEnableAdcBuffChan = lib_handle.DPxEnableAdcBuffChan
DPxEnableAdcBuffChan.restype = None
DPxEnableAdcBuffChan.argtypes = [c_int]
DPxDisableAdcBuffChan = lib_handle.DPxDisableAdcBuffChan
DPxDisableAdcBuffChan.restype = None
DPxDisableAdcBuffChan.argtypes = [c_int]
DPxDisableAdcBuffAllChans = lib_handle.DPxDisableAdcBuffAllChans
DPxDisableAdcBuffAllChans.restype = None
DPxDisableAdcBuffAllChans.argtypes = []
DPxIsAdcBuffChan = lib_handle.DPxIsAdcBuffChan
DPxIsAdcBuffChan.restype = c_int
DPxIsAdcBuffChan.argtypes = [c_int]
DPxEnableAdcCalibRaw = lib_handle.DPxEnableAdcCalibRaw
DPxEnableAdcCalibRaw.restype = None
DPxEnableAdcCalibRaw.argtypes = []
DPxDisableAdcCalibRaw = lib_handle.DPxDisableAdcCalibRaw
DPxDisableAdcCalibRaw.restype = None
DPxDisableAdcCalibRaw.argtypes = []
DPxIsAdcCalibRaw = lib_handle.DPxIsAdcCalibRaw
DPxIsAdcCalibRaw.restype = c_int
DPxIsAdcCalibRaw.argtypes = []
DPxEnableDacAdcLoopback = lib_handle.DPxEnableDacAdcLoopback
DPxEnableDacAdcLoopback.restype = None
DPxEnableDacAdcLoopback.argtypes = []
DPxDisableDacAdcLoopback = lib_handle.DPxDisableDacAdcLoopback
DPxDisableDacAdcLoopback.restype = None
DPxDisableDacAdcLoopback.argtypes = []
DPxIsDacAdcLoopback = lib_handle.DPxIsDacAdcLoopback
DPxIsDacAdcLoopback.restype = c_int
DPxIsDacAdcLoopback.argtypes = []
DPxEnableAdcFreeRun = lib_handle.DPxEnableAdcFreeRun
DPxEnableAdcFreeRun.restype = None
DPxEnableAdcFreeRun.argtypes = []
DPxDisableAdcFreeRun = lib_handle.DPxDisableAdcFreeRun
DPxDisableAdcFreeRun.restype = None
DPxDisableAdcFreeRun.argtypes = []
DPxIsAdcFreeRun = lib_handle.DPxIsAdcFreeRun
DPxIsAdcFreeRun.restype = c_int
DPxIsAdcFreeRun.argtypes = []
DPxSetAdcBuffBaseAddr = lib_handle.DPxSetAdcBuffBaseAddr
DPxSetAdcBuffBaseAddr.restype = None
DPxSetAdcBuffBaseAddr.argtypes = [c_uint]
DPxGetAdcBuffBaseAddr = lib_handle.DPxGetAdcBuffBaseAddr
DPxGetAdcBuffBaseAddr.restype = c_uint
DPxGetAdcBuffBaseAddr.argtypes = []
DPxSetAdcBuffWriteAddr = lib_handle.DPxSetAdcBuffWriteAddr
DPxSetAdcBuffWriteAddr.restype = None
DPxSetAdcBuffWriteAddr.argtypes = [c_uint]
DPxGetAdcBuffWriteAddr = lib_handle.DPxGetAdcBuffWriteAddr
DPxGetAdcBuffWriteAddr.restype = c_uint
DPxGetAdcBuffWriteAddr.argtypes = []
DPxSetAdcBuffSize = lib_handle.DPxSetAdcBuffSize
DPxSetAdcBuffSize.restype = None
DPxSetAdcBuffSize.argtypes = [c_uint]
DPxGetAdcBuffSize = lib_handle.DPxGetAdcBuffSize
DPxGetAdcBuffSize.restype = c_uint
DPxGetAdcBuffSize.argtypes = []
DPxSetAdcBuff = lib_handle.DPxSetAdcBuff
DPxSetAdcBuff.restype = None
